--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cls-rtracer": "^2.6.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.11.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
