--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "morgan": "^1.10.0",
+    "on-headers": "^1.0.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
