--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "helmet": "^4.1.1",
     "morgan": "^1.10.0",
     "on-headers": "^1.0.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
