--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
+    "clean": "rimraf dist",
+    "build": "npm run clean && babel src --out-dir dist  --copy-files",
+    "start": "node dist/bin/www",
+    "dev": "nodemon --exec babel-node ./src/bin/www",
     "test": "mocha --require test/setup.js",
-    "start": "node ./src/bin/www",
-    "dev": "nodemon ./src/bin/www",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
@@ -28,9 +29,16 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/node": "^7.22.19",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.23.7",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
-    "nodemon": "^2.0.6",
+    "nodemon": "^3.0.2",
+    "rimraf": "^5.0.5",
     "supertest": "^5.0.0"
   }
 }
