--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,15 @@
     ],
     "plugins": [
       "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-object-rest-spread"
+      "@babel/plugin-proposal-object-rest-spread",
+      ["module-resolver", {
+        "alias": {
+          "@Src": "./src",
+          "@Database": "./src/database",
+          "@Routes": "./src/routes",
+          "@Utils": "./src/utils",
+          "@StatusCodes": "./src/utils/statusCodes"
+        }
+      }]
     ]
   }
