--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.23.7",
+    "babel-plugin-module-resolver": "^5.0.0",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
     "nodemon": "^3.0.2",
