--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "node dist/bin/www",
     "dev": "nodemon --exec babel-node ./src/bin/www",
     "test": "mocha --require test/setup.js",
+    "pg:up": "docker-compose up -d",
+    "pg:down": "docker-compose down",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
@@ -19,7 +21,6 @@
     "cls-rtracer": "^2.6.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "eslint": "^7.11.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "morgan": "^1.10.0",
@@ -37,6 +38,7 @@
     "@babel/preset-env": "^7.23.7",
     "babel-plugin-module-resolver": "^5.0.0",
     "chai": "^4.2.0",
+    "eslint": "^8.56.0",
     "mocha": "^8.2.0",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
