--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "on-headers": "^1.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.3",
     "winston": "^3.11.0"
   },
   "devDependencies": {
