--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "node dist/bin/www",
     "dev": "nodemon --exec babel-node ./src/bin/www",
     "test": "mocha --require test/setup.js",
+    "migrate:latest": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
     "pg:up": "docker-compose up -d",
     "pg:down": "docker-compose down",
     "predeploy": "npm audit",
@@ -23,13 +25,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "on-headers": "^1.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.10.0",
+    "pg": "^8.11.3",
     "pg-promise": "^11.5.4",
-    "serialize-error": "^11.0.3",
     "winston": "^3.11.0"
   },
   "devDependencies": {
@@ -42,7 +44,6 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "chai": "^4.2.0",
     "eslint": "^8.56.0",
-    "knex": "^2.4.0",
     "mocha": "^8.2.0",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
