--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^7.0.1",
     "helmet": "^4.6.0",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
